--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -18,3 +18,17 @@
     background: #ebfffc;
     cursor: pointer;
 }
+
+.weather-icon{
+    width: 150px;
+}
+
+.temperature{
+    color: #fff;
+    font-size: 65px;
+    line-height: 1;
+}
+
+.location{
+    color: #fff;
+}
